fix responsiveness on mobile device

--- a/src/App.scss
+++ b/src/App.scss
@@ -140,3 +140,11 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.projects__bg {
+  background: url('../src/assets/images/blog01.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
