--- a/src/components/ProjectContainer/ProjectContainer.scss
+++ b/src/components/ProjectContainer/ProjectContainer.scss
@@ -16,12 +16,8 @@
     flex-direction: column;
   }
 
-  @include smTablet {
-    height: 80%;
-  }
-
   @include mobile {
-    width: 80%;
+    width: 90%;
     height: 90%;
   }
 
@@ -47,7 +43,12 @@
       font-weight: 500;
 
       @include smTablet {
+        margin: 20px 0px;
         font-size: 45px;
+      }
+
+      @include mobile {
+        margin-top: 40px;
       }
 
       @include smMobile {
@@ -66,6 +67,8 @@
       }
 
       @include smMobile {
+        margin-top: 10px;
+        margin-bottom: 0;
         font-size: 10px;
       }
     }
@@ -75,8 +78,14 @@
       font-size: 16px;
       cursor: pointer;
       padding: 0;
+      padding: 20px;
+
+      @include smTablet {
+        margin: 30px 0px;
+      }
 
       @include mobile {
+        margin: 40px 0px;
         font-size: 14px;
       }
     }
@@ -87,6 +96,10 @@
       font-size: 18px;
       text-transform: capitalize;
       color: $textColor;
+
+      @include smTablet {
+        margin-bottom: 30px;
+      }
 
       @include mobile {
         font-size: 16px;
@@ -119,6 +132,10 @@
       justify-content: center;
       flex-direction: column;
 
+      @include smTablet {
+        align-items: flex-start;
+      }
+
       @include mobile {
         display: none;
       }
@@ -132,14 +149,22 @@
 
       @include smTablet {
         flex-direction: column;
+        align-items: flex-end;
       }
 
       @include mobile {
+        padding: 40px;
         flex-direction: row;
       }
 
       @include smMobile {
+        padding: 20px;
         flex-wrap: wrap;
+        align-items: center;
+      }
+
+      .box {
+        margin-top: 20px;
       }
     }
   }
