--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,7 +2,7 @@
 
 .about {
   width: 100%;
-  height: calc(100vh - 150px);
+  min-height: calc(100vh - 150px);
   display: flex;
 
   @include mobile {
