--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,7 +2,7 @@
 
 .home {
   width: 100vw;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
   display: flex;
   flex-direction: column;
 
